<resources>
    <string name="app_name">Siji</string>

    <string name="ADMOB_APP_ID">ca-app-pub-1474947036905548~8964044047</string>
    <!--    test device-->
    <string name="ADMOB_UNIT_REWARD">ca-app-pub-3940256099942544/5224354917</string>
    <!--real devide-->
    <!--    <string name="ADMOB_UNIT_REWARD">ca-app-pub-1474947036905548/3525411307</string>-->

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">Library</string>
    <string name="store">Store</string>
    <string name="subject">Danh mục</string>
    <string name="me">Tôi</string>
    <string name="truyen_trong_nuoc">TRUYỆN TRONG NƯỚC</string>
    <string name="truyen_nuoc_ngoai">TRUYỆN NƯỚC NGOÀI</string>
    <string name="truyen_moi">TRUYỆN MỚI</string>
    <string name="truyen_xem_nhieu">TRUYỆN XEM NHIỀU</string>
    <string name="bang_xep_hang">BẢNG XẾP HẠNG</string>
    <string name="title_today">HÔM NAY XEM GÌ? </string>
    <string name="truyen_hoan_thanh">TRUYỆN HOÀN THÀNH</string>
    <string name="tom_tat_truyen">TÓM TẮT NỘI DUNG</string>
    <string name="advertise">Advertise - Quảng cáo</string>

    <string name="title_loading">Loading...</string>
    <string name="chi_tiet">Chi Tiết</string>
    <string name="noi_dung">Nội Dung</string>
    <string name="title_noi_dung">Nhập không quá 100 ký tự...</string>
    <string name="title_max_length_350">Nhập không quá 350 ký tự...</string>
    <string name="title_user_notifi">Bạn là tác giả ,dịch giả muốn đăng truyện lên ứng dụng. Xin vui lòng để lại lời nhắn dưới đây. Cảm ơn! </string>
    <string name="refresh">Refresh</string>
    <string name="thay_doi">Thay Đổi</string>

    <string name="app_name_fb">Siji</string>
    <string name="FACEBOOK_APP_ID">1375023275989160</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">06208c0606c8b7b0604f9d8831622305</string>
    <string name="Ad_Facebook_Inters">610775702589870_897625177238253</string>
    <string name="Ad_Facebook_Native">610775702589870_897623900571714</string>


    <string name="name">name</string>
    <string name="id">id</string>
    <string name="email">email</string>
    <string name="link">link</string>exit_dialog_title
    <string name="fields">fields</string>
    <string name="fields_name">id,name,link,email,location,last_name,hometown,first_name,gender,birthday,age_range,address</string>
    <string name="data">data</string>

    <string name="wifi_connection">The active connection is wifi.</string>
    <string name="mobile_connection">The active connection is mobile.</string>
    <string name="no_wifi_or_mobile">No wireless or mobile connection.</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed">Subscribed </string>
    <string name="msg_subscribe_failed">Failed to subscribe</string>

    <string name="all_manga_fragment">Tất cả</string>
    <string name="full_manga_fragment">Truyện Full</string>
    <string name="most_views_manga_fragment">Xem nhiều</string>

    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="user_notification">Gửi thông báo</string>
    <string name="policy">Tuyên bố quyền miễn trừ trách nhiệm</string>
    <string name="content_policy">Tuyên bố quyền miễn trừ trách nhiệm</string>

    <string name="nomedia_document">.nomedia</string>

    <string name="title_activity_epub_viewer">EpubViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="signin_by_facebook">SignIn By FaceBook</string>
    <string name="signin_by_google">SignIn By Google</string>

    <string name="bo_suu_tap">Bộ sưu tập</string>
    <string name="chapter">Chapter</string>

    <string name="action_settings">Settings</string>
    <string name="msg_login_failed">Đăng nhập không thành công! </string>
    <string name="title_slide_mode">Slide Mode</string>
    <string name="title_line_mode">Line Mode</string>
    <string name="title_bao_loi">Báo lỗi! </string>
    <string name="title_dang_doc">Đang đọc: </string>
    <string name="title_chapter">Chapter </string>
    <string name="title_translator">Translator</string>
    <string name="title_comment">Comment </string>
    <string name="them_truyen_yeu_thich">Đã thêm vào mục yêu thích!</string>

    <string name="send_btn">Gửi</string>
    <string name="exit_dialog_title">Bạn có muốn đăng xuất không?</string>
    <string name="exit_btn">Thoát</string>
    <string name="cancel_btn">Hủy</string>
    <string name="xac_nhan">Đồng ý </string>
    <string name="exit_label">Thông báo lỗi!</string>
    <string name="thanks_label">Cảm ơn bạn đã phản hồi cho chúng tôi !</string>
    <string name="search">Search ...</string>
    <string name="type_some_text">Nhập tìm kiếm...</string>
    <string name="comment_some_text">Bình luận...</string>
    <string name="ho_tro_tim_truyen">Hỗ trợ tìm truyện </string>
    <string name="yeu_cau_tim_truyen">Bạn muốn tìm truyện gì? </string>

    <string name="title_reward_dialog">Để đọc tiếp vui lòng xác nhận bạn đồng ý xem quảng cáo!</string>

    <string name="mimeType_text">text</string>
    <string name="mimeType_image">image</string>

    <string name="nhan_thong_bao">Nhận thông báo khi có truyện mới</string>
    <string name="khong_nhan_thong_bao">Không nhận thông báo khi có truyện mới</string>
    <string name="them_vao_thu_vien">Thêm vào bộ sưu tập </string>

</resources>
