<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:gravity="center"
        android:textAppearance="@style/Base.AlertDialog.AppCompat"
        android:layout_marginBottom="8dp"
        android:text="@string/exit_label"
        android:scaleType="center"
        android:background="@color/myColorPrimary"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/msg_dialog_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="150"
        android:lines="2"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/title_noi_dung" />

</LinearLayout>