<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

    <TextView
        android:id="@+id/tv_msg_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="8dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/title_reward_dialog"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/reward_dialog_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel_btn" />

        <Button
            style="@style/com_facebook_button"
            android:id="@+id/reward_dialog_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xac_nhan"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/myColorPrimary"></Button>
    </LinearLayout>
</LinearLayout>

