<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabContainerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/colorPrimary"
    android:gravity="right|center"
    android:orientation="horizontal"
    android:visibility="gone">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_exchange_fab_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="8dp"
                android:text="@string/bo_suu_tap"
                android:textColor="#fff" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/exchange_fab_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:elevation="0dp"
                app:backgroundTint="@color/white"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_slide_mode" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:elevation="8dp"
                android:text="@string/title_bao_loi"
                android:textColor="#fff" />



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/msg_bug_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:elevation="0dp"
                app:backgroundTint="@color/white"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_error_outline_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:elevation="8dp"
                android:text="@string/title_home"
                android:textColor="#fff" />



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:elevation="0dp"
                app:backgroundTint="@color/white"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_home" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>