<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_home_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/banner_koniki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:id="@+id/slider_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <net.siji.imageSliderViewPager.IndicatorView
                        android:id="@+id/indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="14dp"
                        app:hado_radius_selected="5dp"
                        app:hado_radius_unselected="3dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/ll_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="6dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                        android:fontFamily="@font/comfortaa_regular"
                        android:text="@string/bang_xep_hang"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horizontal_recycler_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_form_new_comic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="6dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                        android:fontFamily="@font/comfortaa_regular"
                        android:text="@string/truyen_moi"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horizontal_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_form_view_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="6dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                        android:fontFamily="@font/comfortaa_regular"
                        android:text="@string/truyen_xem_nhieu"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horizontal_recycler_most_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_form_comic_full"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="6dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                        android:fontFamily="@font/comfortaa_regular"
                        android:text="@string/truyen_hoan_thanh"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horizontal_recycler_full"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>